<resources>
    <string name="app_name">MAD Level 1 Task 1</string>
    <string name="guess">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="btnEqual">Equal</string>
    <string name="btnLower">Lower</string>
    <string name="btnHigher">Higher</string>
    <string name="last_throw">Last Throw: %d</string>
    <string name="dice_image">Dice Image</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect!</string>
</resources>
